transform-origin-fix

--- a/css/style.css
+++ b/css/style.css
@@ -83,20 +83,21 @@ body .draw-section {
   left: 0;
   top: 0;
   z-index: -10000;
+  transform: rotate(30deg);
+  transition: 1000ms;
 }
-body .draw-tile {
+body .draw-section .draw-tile {
   position: fixed;
   left: 0;
   top: 0;
   z-index: -10000;
   width: 32px;
   height: 32px;
-  transition: 100ms;
 }
-body .draw-tile-odd {
+body .draw-section .draw-tile-odd {
   background-color: #deffb3;
 }
-body .draw-tile-even {
+body .draw-section .draw-tile-even {
   border-width: 1px;
   border-color: #deffb3;
   background-color: rgba(255, 255, 255, 0.537254902);
