--- a/style.scss
+++ b/style.scss
@@ -106,8 +106,13 @@ body {
                 text-align: center;
             }
 
+
         }
-    
+
+        #tool {
+            height: 200vh;
+
+        }
     }
 
     @media screen and (max-width: 1000px){
@@ -161,18 +166,14 @@ body {
         }
     }
 
-    .scroll-guide {
-        align-items: center;
-        display: flex;
+    .license {
 
-        width: 80vw;
+        width: 100%;
+        padding-left: 15vw;
+        padding-right: 15vw;
 
         p {
-            width: 60vw;
-            
-            flex-direction: column-reverse;
-            justify-content: flex-end;
-            text-align: center;
+            text-align: left;
         }
     }
 }
